--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 <body>
     <h1>Relatório Power BI</h1>
     <iframe src="SEU_LINK_DO_POWER_BI_AQUI" frameborder="0"></iframe>
-    <button onclick="alert('Botão clicado!')">Clique Aqui</button>
+    <script src="//code.tidio.co/shl7w0vnfdrsx2fxcpwaxzbvtrmqxbrd.js" async></script>
 </body>
 </html>
