--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <h1>Relatório Power BI</h1>
-    <iframe src="https://app.powerbi.com/discover/gallery/0579b437-67ba-4acf-b2c8-4bebc64b9899?experience=power-bi" frameborder="0"></iframe>
+    <iframe title="teste" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZTY0ZTBlZGMtNTg2YS00ZjJlLTg2NDYtMjNlMDBkNGM1OTQ4IiwidCI6ImVjMzU5YmExLTYzMGItNGQyYi1iODMzLWM4ZTZkNDhmODA1OSJ9" frameborder="0" allowFullScreen="true"></iframe>  
     <script src="//code.tidio.co/shl7w0vnfdrsx2fxcpwaxzbvtrmqxbrd.js" async></script>
 </body>
 </html>
